[package]
name = "cassylab_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
quick-xml = { version = "0.31.0", features = ["serialize", "serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
